--- a/src/app/bet-list/bet-list.component.html
+++ b/src/app/bet-list/bet-list.component.html
@@ -1,12 +1,18 @@
-<div class="col-xs-6 col-md-7">
+<div class="col-xs-6 col-md-6">
   <ul class="list-group">
       <li *ngFor ="let bet of betData" class="list-group-item clearfix" style="padding:0;">
-        <span class="col-xs-6" 
+        <span class="col-xs-6 col-md-6" 
               style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
               {{bet.team1}} - {{bet.team2}}
         </span>
-        <span class="col-xs-4" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
-          {{bet.selected}}
+        <span *ngIf="bet.bids.t1" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
+          {{bet.team1}} will win.
+        </span>
+        <span *ngIf="bet.bids.d" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
+          Draw
+        </span>
+        <span *ngIf="bet.bids.t2" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
+          {{bet.team1}} will win.
         </span>
       </li>
   </ul>
