--- a/src/app/matches-list/matches-list.component.html
+++ b/src/app/matches-list/matches-list.component.html
@@ -1,9 +1,9 @@
-<div class="col-xs-6 col-md-5">
+<div class="col-xs-6 col-md-6">
   <ul class="nav nav-pills nav-stacked">
-    <li class="matchList" *ngFor ="let match of matches" (click)="addBet($event, match, firstTeam, draw, secondTeam)">
-      <a href="#" class="col-md-4 text-left" #firstTeam>{{match.team1}}</a>
-      <a href="#" class="col-md-4 text-center" #draw>Draw</a>
-      <a href="#" class="col-md-4 text-right" #secondTeam>{{match.team2}}</a>
+    <li class="matchList" *ngFor ="let match of matches">
+      <a (click)="addBet(match, 't1')" class="col-md-4 text-left" [ngClass]="{'selectedBid': match.bids.t1}">{{match.team1}}</a>
+      <a (click)="addBet(match, 'd')" class="col-md-4 text-center" [ngClass]="{'selectedBid': match.bids.d}">Draw</a>
+      <a (click)="addBet(match, 't2')" class="col-md-4 text-right" [ngClass]="{'selectedBid': match.bids.t2}">{{match.team2}}</a>
     </li>
   </ul>
   <button class="btn btn-primary" (click)="submitBet()">Submit bet</button>
