--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
-<ul class="nav navbar-nav navbar-default container">
+<ul appHighlight class="nav navbar-nav navbar-default container">
   <li>
-    <a href="#"(click)="onSelected('matchesList')">Matches list</a>
+    <a appMenuItemHighlight href="#"(click)="onSelected('matchesList')">Matches list</a>
   </li>
   <li>
-    <a href="#" (click)="onSelected('bets')">Bets</a>
+    <a appMenuItemHighlight href="#" (click)="onSelected('bets')">Bets</a>
   </li>
 </ul>
