--- a/src/app/bet-list/bet-list.component.html
+++ b/src/app/bet-list/bet-list.component.html
@@ -5,9 +5,15 @@
               style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
               {{bet.team1}} - {{bet.team2}}
         </span>
-        <span class="col-xs-4" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
-          {{bet.selected}}
+        <span *ngIf="bet.results.t1" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
+          {{bet.team1}} wins
         </span>
+        <span *ngIf="bet.results.d" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
+          Draw
+        </span>
+        <span *ngIf="bet.results.t2" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
+          {{bet.team1}} wins
+</span>
       </li>
   </ul>
 </div>
