--- a/src/app/bet-list/bet-list.component.html
+++ b/src/app/bet-list/bet-list.component.html
@@ -1,19 +1,21 @@
 <div class="col-xs-6 col-md-7">
-  <ul class="list-group">
-      <li *ngFor ="let bet of betData" class="list-group-item clearfix" style="padding:0;">
-        <span class="col-xs-6" 
-              style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
-              {{bet.team1}} - {{bet.team2}}
-        </span>
-        <span *ngIf="bet.results.t1" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
-          {{bet.team1}} wins
-        </span>
-        <span *ngIf="bet.results.d" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
-          Draw
-        </span>
-        <span *ngIf="bet.results.t2" class="col-xs-4 col-md-6" style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
-          {{bet.team1}} wins
-</span>
-      </li>
-  </ul>
+  <div *ngFor ="let competition of betList">
+    <ul class="list-group" *ngFor ="let bet of competition">
+        <li class="list-group-item clearfix" *ngIf="bet.results.t1 || bet.results.d || bet.results.t2" style="padding:0;">
+            <span class="col-xs-6" 
+                  style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
+                  {{bet.team1}} - {{bet.team2}}
+            </span>
+            <span *ngIf="bet.results.t1" class="col-xs-4 col-md-6" style="padding: 10px 15px; text-align: center;">
+              {{bet.team1}} wins
+            </span>
+            <span *ngIf="bet.results.d" class="col-xs-4 col-md-6" style="padding: 10px 15px; text-align: center;">
+              Draw
+            </span>
+            <span *ngIf="bet.results.t2" class="col-xs-4 col-md-6" style="padding: 10px 15px; text-align: center;">
+              {{bet.team1}} wins
+            </span>      
+        </li>
+    </ul>
+</div>
 </div>
