--- a/src/app/matches-list/matches-list.component.html
+++ b/src/app/matches-list/matches-list.component.html
@@ -1,6 +1,6 @@
 <div class="col-xs-6 col-md-5">
   <div class="competition" *ngIf = "matches.ChampionsLeague">
-    <div class="competitionHeader championsLeague">Champions League</div>
+    <div class="competitionHeader championsLeague">Champions League<span class="arrowDown"></span></div>
     <ul class="nav nav-pills nav-stacked">
       <li class="matchList" *ngFor ="let match of matches.ChampionsLeague">
         <a href="#" class="col-md-4 text-left" (click)="addBet(match, 't1')" [ngClass]="{'selectedTeam': match.results.t1}">{{match.team1}}</a>
@@ -9,7 +9,7 @@
       </li>
     </ul>
   </div>
-  <div class="competition" *ngIf = "matches.PremierLeague">
+  <div class="competition" *ngIf = "matches.PremierLeague.length > 0">
     <div class="competitionHeader premierLeague">Premier League</div>
     <ul class="nav nav-pills nav-stacked">
       <li class="matchList" *ngFor ="let match of matches.PremierLeague">
