--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,11 @@
-<ul appHighlight class="nav navbar-nav navbar-default container">
+<ul appHighlight class="nav navbar-nav col-xs-6 col-md-12">
   <li>
-    <a appMenuItemHighlight href="#"(click)="onSelected('matchesList')">Matches list</a>
+    <a appMenuItemHighlight href="#">Matches list</a>
   </li>
   <li>
-    <a appMenuItemHighlight href="#" (click)="onSelected('bets')">Bets</a>
+    <a appMenuItemHighlight href="#">Bets</a>
+  </li>
+  <li class="userInfo navbar-right">
+    <a appMenuItemHighlight href="#">User info</a>
   </li>
 </ul>
