--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div class="row">
-        <app-header (itemSelected)="onNavigate($event)"></app-header>
+        <app-header></app-header>
     </div>
     <div class="row">
-        <app-matches-list *ngIf="selectedItem === 'matchesList'" (betSubmitted)="onBetSubmitted($event)"></app-matches-list>       
-        <app-bet-list *ngIf="selectedItem === 'bets'" [betData]="betData"></app-bet-list>
+        <app-matches-list (betSubmitted)="onBetSubmitted($event)"></app-matches-list>       
+        <app-bet-list [betList]="betData"></app-bet-list>
     </div>
     
 
