--- a/src/app/matches-list/matches-list.component.html
+++ b/src/app/matches-list/matches-list.component.html
@@ -1,23 +1,27 @@
 <div class="col-xs-6 col-md-5">
-  <div class="competition" *ngIf = "matches.ChampionsLeague">
-    <div class="competitionHeader championsLeague">Champions League<span class="arrowDown"></span></div>
+  <app-competition 
+    *ngFor = "let competition of competitions" 
+    [matches]="matches[competition]"
+    [competition]="competition" ></app-competition>
+  <!-- <div class="competition" *ngIf = "matches.ChampionsLeague">
+    <div class="competitionHeader championsLeague" appToggleBlock>Champions League<i class="arrow"></i></div>
     <ul class="nav nav-pills nav-stacked">
       <li class="matchList" *ngFor ="let match of matches.ChampionsLeague">
-        <a href="#" class="col-md-4 text-left" (click)="addBet(match, 't1')" [ngClass]="{'selectedTeam': match.results.t1}">{{match.team1}}</a>
-        <a href="#" class="col-md-4 text-center" (click)="addBet(match, 'd')" [ngClass]="{'selectedTeam': match.results.d}">Draw</a>
-        <a href="#" class="col-md-4 text-right" (click)="addBet(match, 't2')" [ngClass]="{'selectedTeam': match.results.t2}">{{match.team2}}</a>
+        <a class="col-md-4 text-left" (click)="addBet(match, 't1')" [ngClass]="{'selectedTeam': match.results.t1}">{{match.team1}}</a>
+        <a class="col-md-4 text-center" (click)="addBet(match, 'd')" [ngClass]="{'selectedTeam': match.results.d}">Draw</a>
+        <a class="col-md-4 text-right" (click)="addBet(match, 't2')" [ngClass]="{'selectedTeam': match.results.t2}">{{match.team2}}</a>
       </li>
     </ul>
   </div>
   <div class="competition" *ngIf = "matches.PremierLeague.length > 0">
-    <div class="competitionHeader premierLeague">Premier League</div>
+    <div class="competitionHeader premierLeague" appToggleBlock>Premier League<i class="arrow"></i></div>
     <ul class="nav nav-pills nav-stacked">
       <li class="matchList" *ngFor ="let match of matches.PremierLeague">
-        <a href="#" class="col-md-4 text-left" (click)="addBet(match, 't1')" [ngClass]="{'selectedTeam': match.results.t1}">{{match.team1}}</a>
-        <a href="#" class="col-md-4 text-center" (click)="addBet(match, 'd')" [ngClass]="{'selectedTeam': match.results.d}">Draw</a>
-        <a href="#" class="col-md-4 text-right" (click)="addBet(match, 't2')" [ngClass]="{'selectedTeam': match.results.t2}">{{match.team2}}</a>
+        <a class="col-md-4 text-left" (click)="addBet(match, 't1')" [ngClass]="{'selectedTeam': match.results.t1}">{{match.team1}}</a>
+        <a class="col-md-4 text-center" (click)="addBet(match, 'd')" [ngClass]="{'selectedTeam': match.results.d}">Draw</a>
+        <a class="col-md-4 text-right" (click)="addBet(match, 't2')" [ngClass]="{'selectedTeam': match.results.t2}">{{match.team2}}</a>
       </li>
     </ul>
-  </div>
+  </div> -->
 <button class="btn btn-primary submitBet" (click)="submitBet()">Submit bet</button>
 </div>
