--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <ul appHighlight class="nav navbar-nav col-xs-6 col-md-12">
   <li>
-    <a appMenuItemHighlight href="#">Matches list</a>
+    <a appMenuItemHighlight routerLink="/">Matches list</a>
   </li>
   <li>
-    <a appMenuItemHighlight href="#">Bets</a>
+    <a appMenuItemHighlight>Bets</a>
   </li>
   <li class="userInfo navbar-right">
-    <a appMenuItemHighlight href="#">User info</a>
+    <a appMenuItemHighlight routerLink="/userinfo">User info</a>
   </li>
 </ul>
