--- a/src/app/main/bet-list/bet-list.component.html
+++ b/src/app/main/bet-list/bet-list.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-md-7 betList">
+<!-- <div class="col-xs-6 col-md-7 betList">
   <div *ngFor ="let competition of betList">
     <ul class="list-group" *ngFor ="let bet of competition">
         <li class="list-group-item clearfix" *ngIf="bet.results.t1 || bet.results.d || bet.results.t2" style="padding:0;">
@@ -18,4 +18,4 @@
         </li>
     </ul>
 </div>
-</div>
+</div> -->
