--- a/src/app/main/bet-list/bet-list.component.html
+++ b/src/app/main/bet-list/bet-list.component.html
@@ -1,7 +1,6 @@
-<!-- <div class="col-xs-6 col-md-7 betList">
-  <div *ngFor ="let competition of betList">
-    <ul class="list-group" *ngFor ="let bet of competition">
-        <li class="list-group-item clearfix" *ngIf="bet.results.t1 || bet.results.d || bet.results.t2" style="padding:0;">
+<div class="col-xs-6 col-md-7 betList">
+    <ul class="list-group" *ngFor ="let bet of renderedBet">
+        <li class="list-group-item clearfix" style="padding:0;">
             <span class="col-xs-6" 
                   style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
                   {{bet.team1}} - {{bet.team2}}
@@ -18,4 +17,3 @@
         </li>
     </ul>
 </div>
-</div> -->
