--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<ul appHighlight class="nav navbar-nav col-xs-6 col-md-12">
+<ul class="nav navbar-nav col-xs-6 col-md-12">
   <li>
     <a appMenuItemHighlight routerLink="/">Matches list</a>
   </li>
