--- a/src/app/main/bet-list/bet-list.component.css
+++ b/src/app/main/bet-list/bet-list.component.css
@@ -2,6 +2,19 @@
     margin-top: 0;
 }
 
+.betList li {
+    padding: 0;
+}
+
+.betList li span {
+    padding: 10px 15px;
+    text-align: center;
+}
+
+.betList li span:first-child {
+    border-right: 1px solid #ddd;
+}
+
 .betList div:first-child ul:first-child {
     margin-top: 20px;
 }
