--- a/src/app/main/bet-list/bet-list.component.html
+++ b/src/app/main/bet-list/bet-list.component.html
@@ -1,19 +1,19 @@
 <div class="col-xs-6 col-md-7 betList">
-    <ul class="list-group" *ngFor ="let bet of renderedBet">
-        <li class="list-group-item clearfix" style="padding:0;">
-            <span class="col-xs-6" 
-                  style="padding: 10px 15px; border-right: 1px solid #ddd; text-align: center;">
-                  {{bet.team1}} - {{bet.team2}}
-            </span>
-            <span *ngIf="bet.results.t1" class="col-xs-4 col-md-6" style="padding: 10px 15px; text-align: center;">
-              {{bet.team1}} wins
-            </span>
-            <span *ngIf="bet.results.d" class="col-xs-4 col-md-6" style="padding: 10px 15px; text-align: center;">
-              Draw
-            </span>
-            <span *ngIf="bet.results.t2" class="col-xs-4 col-md-6" style="padding: 10px 15px; text-align: center;">
-              {{bet.team2}} wins
-            </span>      
-        </li>
-    </ul>
+  <div *ngIf="newBet.hasOwnProperty('bet')">Your last bet</div>
+  <ul class="list-group" *ngFor="let bet of newBet.bet">
+    <li class="list-group-item clearfix">
+      <span class="col-xs-6">
+        {{bet.team1}} - {{bet.team2}}
+      </span>
+      <span *ngIf="bet.results.t1" class="col-xs-4 col-md-6">
+        {{bet.team1}} wins
+      </span>
+      <span *ngIf="bet.results.d" class="col-xs-4 col-md-6">
+        Draw
+      </span>
+      <span *ngIf="bet.results.t2" class="col-xs-4 col-md-6">
+        {{bet.team2}} wins
+      </span>
+    </li>
+  </ul>
 </div>
