--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,2 +1,2 @@
-<app-matches-list (betSubmitted)="onBetSubmitted($event)"></app-matches-list>       
+<app-matches-list></app-matches-list>       
 <app-bet-list ></app-bet-list>
