CSS classes naming updates

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
-<ul class="nav navbar-nav col-xs-6 col-md-12">
+<ul class="header-menu nav navbar-nav col-xs-6 col-md-12">
   <li>
-    <a appMenuItemHighlight routerLink="/">Matches list</a>
+    <a class='header-menu-item-link' appMenuItemHighlight routerLink="/">Matches list</a>
   </li>
   <li>
-    <a appMenuItemHighlight>Bets</a>
+    <a class='header-menu-item-link' appMenuItemHighlight>Bets</a>
   </li>
   <li class="userInfo navbar-right">
-    <a appMenuItemHighlight routerLink="/userinfo">User info</a>
+    <a class='header-menu-item-link' appMenuItemHighlight routerLink="/userinfo">User info</a>
   </li>
 </ul>
