--- a/src/app/main/matches-list/matches-list.component.scss
+++ b/src/app/main/matches-list/matches-list.component.scss
@@ -1,7 +1,7 @@
 .selectedTeam,
 .selectedTeam:hover,
 .selectedTeam:focus  {
-  background-color: #00ffa1c4;
+  background-color: #00ffa2;
   cursor: pointer;
 }
 
