--- a/src/app/main/userinfo/userinfo.component.html
+++ b/src/app/main/userinfo/userinfo.component.html
@@ -20,3 +20,6 @@
     </ul>
   </div>
 </div>
+<div class="col-xs-6 col-md-7">
+  <button class="btn btn-primary" (click)="returnToMain()">Back to matches list</button>
+</div>
