--- a/src/app/main/bet-list/bet-list.component.html
+++ b/src/app/main/bet-list/bet-list.component.html
@@ -2,7 +2,8 @@
   <div *ngIf="newBet.hasOwnProperty('bet')">Your last bet</div>
   <ul class="list-group" *ngFor="let bet of newBet.bet">
     <li class="betList-match list-group-item clearfix">
-      <span class="betList-match-cell betList-match col-xs-6">
+      <app-match [match]="bet"></app-match>
+      <!-- <span class="betList-match-cell betList-match col-xs-6">
         {{bet.team1}} - {{bet.team2}}
       </span>
       <span *ngIf="bet.results.t1" class="betList-match-cell col-xs-4 col-md-6">
@@ -13,7 +14,7 @@
       </span>
       <span *ngIf="bet.results.t2" class="betList-match-cell col-xs-4 col-md-6">
         {{bet.team2}} wins
-      </span>
+      </span> -->
     </li>
   </ul>
 </div>
