--- a/src/app/main/bet-list/bet-list.component.html
+++ b/src/app/main/bet-list/bet-list.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="newBet.hasOwnProperty('bet')">Your last bet</div>
   <ul class="list-group" *ngFor="let bet of newBet.bet">
     <li class="betList-match list-group-item clearfix">
-      <span class="betList-match-cell betList-match col-xs-6">
+      <span class="betList-match-cell betList-match-teams betList-match col-xs-6">
         {{bet.team1}} - {{bet.team2}}
       </span>
       <span *ngIf="bet.results.t1" class="betList-match-cell col-xs-4 col-md-6">
