created Users component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,9 @@
   </li>
   <li>
     <a  class='header-menu-item-link'
+        routerLink="/users"
         routerLinkActive="header-menu-item-link--active" 
-        appMenuItemHighlight>Bets</a>
+        appMenuItemHighlight>Users</a>
   </li>
   <li class="userInfo navbar-right">
     <a  class='header-menu-item-link'
