--- a/src/app/main/users/users.component.html
+++ b/src/app/main/users/users.component.html
@@ -1,9 +1,11 @@
 <div class="col-xs-6 col-md-5">
 <div>Users list</div>
 <ul class="nav nav-pills nav-stacked">
-  <li><a href="#" class="user-item-link">User 1</a></li>
-  <li><a href="#" class="user-item-link">User 2</a></li>
-  <li><a href="#" class="user-item-link">User 3</a></li>
-  <li><a href="#" class="user-item-link">User 4</a></li>
+  <li *ngFor="let user of users">
+    <a [routerLink]="['/users', user.id]" class="user-item-link">{{user.name}}</a>
+  </li>
 </ul>
+</div>
+<div class="col-xs-6 col-md-5">
+  <router-outlet></router-outlet>
 </div>
