--- a/src/app/shared/match/match.component.html
+++ b/src/app/shared/match/match.component.html
@@ -2,13 +2,16 @@
     <span class="betList-match-cell betList-match-teams col-xs-6">
       {{match.team1}} - {{match.team2}}
     </span>
-    <span *ngIf="match.results.t1" class="betList-match-cell col-xs-4 col-md-6">
+    <span *ngIf="match.results.t1" 
+      class="betList-match-cell col-xs-4 col-md-6">
       {{match.team1}} wins
     </span>
-    <span *ngIf="match.results.d" class="betList-match-cell col-xs-4 col-md-6">
+    <span *ngIf="match.results.d" 
+      class="betList-match-cell col-xs-4 col-md-6">
       Draw
     </span>
-    <span *ngIf="match.results.t2" class="betList-match-cell col-xs-4 col-md-6">
+    <span *ngIf="match.results.t2" 
+      class="betList-match-cell col-xs-4 col-md-6">
       {{match.team2}} wins
     </span>
   </li>
