--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,12 @@
         routerLinkActive="header-menu-item-link--active" 
         appMenuItemHighlight>Users</a>
   </li>
+  <li>
+    <a  class='header-menu-item-link'
+        routerLink="/wc2018"
+        routerLinkActive="header-menu-item-link--active" 
+        appMenuItemHighlight>WC 2018</a>
+  </li>
   <li class="userInfo navbar-right">
     <a  class='header-menu-item-link'
         routerLink="/userinfo"
