--- a/src/app/main/matches-list/matches-list.component.html
+++ b/src/app/main/matches-list/matches-list.component.html
@@ -2,9 +2,10 @@
   <app-competition *ngFor="let competition of competitions" 
     [matches]="matches[competition]" 
     [competition]="competition"
+    [selectedMatchesState]="selectedMatches"
     (resultSelected)="onResultSelected($event)"></app-competition>
   <button class="btn btn-primary submitBet" 
-    (click)="submitBet()">
+    (click)="submitBet()">  
     Submit bet</button>
   <button class="btn btn-warning" 
     (click)="clearSelection()">
