--- a/src/app/main/userinfo/userinfo.component.html
+++ b/src/app/main/userinfo/userinfo.component.html
@@ -12,4 +12,7 @@
   <button class="btn btn-primary" 
     (click)="returnToMain()">
     Back to matches list</button>
+    <button class="btn btn-primary" 
+    (click)="getData()">
+    test</button>
 </div>
